# runsc-sentry-guard

./: .gitignore  BUILD_INSTALL.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REQUIREMENTS_AND_COMPLIANCE.md  SECURITY.md  SECURITY_HARDENING.md  TECHNICAL_SPECIFICATION.md  TESTING_AND_SIMULATION.md  config.toml.example  install.sh  rules.json.example
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  llms.txt
config/: mappings.json.example  offline_state.json.example  playbooks.json.example  rules.json.example  whitelists.json.example
docs/: BUILD_INSTALL.md  CONFIG.md  REQUIREMENTS_AND_COMPLIANCE.md  SECURITY_HARDENING.md  TECHNICAL_SPECIFICATION.md
docs/operations/: TESTING_AND_SIMULATION.md
src/: config.rs  ingestion.rs  limiters.rs  logger.rs  main.rs  seccomp.rs  socket.rs  tailer.rs  worker.rs
tests/: PROFILING.md
tests/scripts/: smoke_test.sh  test_async_backpressure.sh  test_file_flood.sh  test_uds_flood.sh
