[package]
name = "runsc-sentry-guard"
version = "0.1.0-alpha.4"
edition = "2024"
authors = ["mutex7c <mutex7c@users.noreply.github.com>"]
description = "An ultra-lightweight active incident response daemon for runsc (gVisor) sandboxes."
homepage = "https://github.com/mutex7c/runsc-sentry-guard"
repository = "https://github.com/mutex7c/runsc-sentry-guard"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
ipnet = { version = "2.12.0", features = ["serde"] }
libc = "0.2.186"
regex = "1.12.3"
signal-hook = "0.4.4"
notify = "8.2.0"
mio = { version = "1.2.1", features = ["os-ext", "net"] }
parking_lot = "0.12.5"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5.6"